change;ent de font-family

--- a/login.html
+++ b/login.html
@@ -16,9 +16,9 @@
         <h2>Flash Sports Login.🏆</h2>
       </div>
 			<form class="login-form" >
-				<input type="email" name="email" size="50" maxlength="256"  placeholder="Enter e-mail" >
-				<input type="password" name="password" minlength="6" maxlength="32" placeholder="Password" />
-            <button type="submit"><a href="../src/index.html">login</a></button>
+				<input type="email" name="email" size="50" maxlength="256"  placeholder="Enter e-mail" required >
+				<input type="password" name="password" minlength="6" maxlength="32" placeholder="Password" required/>
+            <button type="submit"><a href="./index.html">login</a></button>
  
     <label class="container">  Remember me
   <input type="checkbox">
