--- a/events.html
+++ b/events.html
@@ -57,6 +57,8 @@
             
           </p>
           <a href="./contact.html" class="btn">Participer</a>
+          <a href="./guide.pdf" download class="btn">GUIDE</a>
+
         </div>
 
         <div class="card">
