--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
             </ol>
           </li>
           
-          <li class="menu-item"><a href="./contact.html">Inscription</a></li>
+          <li class="menu-item"><a href="./inscription.html">Inscription</a></li>
           <li class="menu-item"><a href="./login.html">Logout</a></li>
         </ol>
       </nav>
@@ -56,7 +56,7 @@
             Ce n’est un secret pour personne. Toute l’actualité ces derniers mois tourne autour de ça. L’année prochaine, la France a rendez-vous avec un événement unique et majeur pour le sport : les Jeux Olympiques de Paris 2024 ! Non sans conséquences sur la programmation des autres grands événements sportifs en France, les Jeux de Paris seront célébrés du 26 juillet au 11 août 2024 et regrouperont 32 disciplines : athlétisme, golf, football, boxe, judo, handball, aviron, gymnastique, etc. De nouveaux sports comme le surf et le skateboard feront également leur entrée dans la compétition internationale.
             
           </p>
-          <a href="./contact.html" class="btn">Participer</a>
+          <a href="./inscription.html" class="btn">Participer</a>
           <a href="./guide.pdf" download class="btn">GUIDE</a>
 
         </div>
@@ -73,7 +73,7 @@
           <h3 class="heading-tertiary" id="foot"> UEFA EURO 2024</h3>
           <p style="color: black;">
             Amateurs de football, vous attendez sûrement cet événement avec impatience ! Réunissant les meilleures équipes européennes, le Championnat d’Europe se déroulera du 14 juin au 14 juillet 2024 en Allemagne dans dix villes : Berlin, Cologne, Dortmund, Düsseldorf, Francfort, Gelsenkirchen, Hambourg, Leipzig, Munich et Stuttgart. Afin d’être sûr(e) de ne pas manquer cette compétition exceptionnelle, vous avez déjà la possibilité de vous préinscrire sur Voyages FFF, agence officielle de la Fédération Française de Football !       </p>
-          <a href="./contact.html" class="btn">Participer</a>
+          <a href="./inscription.html" class="btn">Participer</a>
         </div>
 
         <div class="card">
@@ -88,7 +88,7 @@
           <h3 class="heading-tertiary" id="Regby">Tournoi des 6 Nations 2024</h3>
           <p style="color: black;">
             Après le succès de la Coupe du Monde de Rugby France 2023, le rugby a encore de beaux jours devant lui, séduisant de plus en plus d’adeptes ! Prochaine compétition d’envergure en date : le Tournoi des Six Nations 2024 ! La compétition se tiendra du 2 février au 16 mars prochain et opposera les six meilleures nations européennes (Angleterre, Écosse, France, Pays de Galles, Irlande et Italie).          </p>
-          <a href="./contact.html" class="btn">Participer</a>
+          <a href="./inscription.html" class="btn">Participer</a>
         </div>
 
         <div class="card">
@@ -103,7 +103,7 @@
           <h3 class="heading-tertiary" id="Regby">Super Bowl LVIII</h3>
           <p style="color: black;">
             Organisé par la National Football League (NFL), le Super Bowl constitue la finale du championnat de football américain, opposant les vainqueurs des deux conférences de la NFL. Rassemblant plus de 110 millions de téléspectateurs chaque année, il s’agit de l’un des événements sportifs les plus suivis au monde. Le concert musical de la mi-temps enregistre notamment des audiences records. Après Rihanna, c’est le chanteur Usher qui sera à la tête du show en 2024.          </p>
-          <a href="./contact.html" class="btn">Participer</a>
+          <a href="./inscription.html" class="btn">Participer</a>
         </div>
 
         <div class="card">
@@ -118,7 +118,7 @@
           <h3 class="heading-tertiary" id="tennis">Roland-Garros 2024</h3>
           <p style="color: black;">
             Que ce soit en France ou dans le monde entier, il s’agit d’un événement très attendu par tous les amateurs de tennis. L’emblématique tournoi de Roland-Garros sera bien évidemment au rendez-vous en 2024 pour une nouvelle édition qui s’annonce déjà grandiose ! La prestigieuse compétition sur terre battue se tiendra du 20 mai au 9 juin 2024 à Paris.           </p>
-          <a href="./contact.html" class="btn">Participer</a>
+          <a href="./inscription.html" class="btn">Participer</a>
         </div>
 
         <div class="card">
@@ -133,7 +133,7 @@
           <h3 class="heading-tertiary">Formule 1, saison 2024</h3>
           <p style="color: black;">
             Côté automobile, ne ratez pas la saison 2024 de Formule 1 ! Le championnat débutera le 2 mars à Bahreïn, sur le circuit de Sakhir, et se clôturera à Abu Dhabi sur la piste de Yas Marina, le 8 décembre 2024. Au total, 24 Grands Prix auront lieu entre mars et décembre avec notamment le retour de la Chine et d’Émilie-Romagne. Cette édition sera ainsi deux mois plus longue que l’actuelle saison F1 2023.          </p>
-          <a href="./contact.html" class="btn">Participer</a>
+          <a href="./inscription.html" class="btn">Participer</a>
         </div>
         <div class="card">
           <div class="icon">
@@ -147,7 +147,7 @@
           <h3 class="heading-tertiary">Coupe d’Afrique des Nations (CAN)</h3>
           <p style="color: black;">
             Pour sa 34ème édition, la Coupe d’Afrique des Nations (CAN) se tiendra du 13 janvier au 11 février 2024 en Côte d’Ivoire. Une première depuis 40 ans ! Initialement prévue l’été dernier, la compétition de football a été décalée en hiver en raison des conditions climatiques défavorables au sein du pays hôte.</p>
-                      <a href="./contact.html" class="btn">Participer</a>
+                      <a href="./inscription.html" class="btn">Participer</a>
         </div>
         <div class="card">
           <div class="icon">
@@ -159,7 +159,7 @@
           <h3 class="heading-tertiary">NBA, saison 2023-2024</h3>
           <p style="color: black;">
 La NBA a fait son grand retour avec le lancement de la saison 2023-2024 le 24 octobre dernier. Jusqu’en juin 2024, les meilleurs basketteurs du monde entier vont se défier sur les parquets avec comme nouvelle tête d’affiche, Victor Wembanyama. N°1 Draft, le jeune français compte bien marquer l’année 2024 de son empreinte avec en ligne de mire une qualification pour les Playoffs et le titre de Rookie de l’année.</p>
-<a href="./contact.html" class="btn">Participer</a>
+<a href="./inscription.html" class="btn">Participer</a>
         </div>
         <div class="card">
           <div class="icon">
@@ -171,7 +171,7 @@ La NBA a fait son grand retour avec le lancement de la saison 2023-2024 le 24 oc
           <h3 class="heading-tertiary" id="France">Le Tour de France 2024</h3>
           <p style="color: black;">
 
-            Rendez-vous immanquable de l’été (en plus de l’EURO et des JO) : la 111ème édition du Tour de France ! L’événement se déroulera du samedi 29 juin au dimanche 21 juillet 2024. Pour la troisième fois consécutive, le départ se fera de l’étranger. Après Copenhague (2022) et Bilbao (2023), le Tour de France s’élancera de Florence, en Italie : une première dans l’histoire de la Grande Boucle.<a href="contact.html" class="btn">Participer</a>
+            Rendez-vous immanquable de l’été (en plus de l’EURO et des JO) : la 111ème édition du Tour de France ! L’événement se déroulera du samedi 29 juin au dimanche 21 juillet 2024. Pour la troisième fois consécutive, le départ se fera de l’étranger. Après Copenhague (2022) et Bilbao (2023), le Tour de France s’élancera de Florence, en Italie : une première dans l’histoire de la Grande Boucle.<a href="inscription.html" class="btn">Participer</a>
         </div>
       </div>
 
