--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <h2>Flash Sports Login.🏆</h2>
       </div>
 			<form class="login-form" >
-				<input type="email" name="email" size="50" maxlength="256"  placeholder="Enter e-mail" required >
+				<input type="email" name="email"  placeholder="Enter e-mail" required >
 				<input type="password" name="password" minlength="6" maxlength="32" placeholder="Password" required/>
             <button type="submit"><a href="./index.html">login</a></button>
  
