--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
             
             <input type="password" name="password" minlength="6" maxlength="32" placeholder="Password" required>
             <input type="password" name="password" placeholder="Confirm password" required/>
-            <button type="submit"><a href="../src/login.html">create</a></button>
+            <button type="submit"><a href="./login.html">create</a></button>
             <p>Already registered? <a href="../src/login.html" style="color: #2196f3;" >Login</a></p>
         </form>
     </div>
