--- a/inscription.html
+++ b/inscription.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css">
-    <title>Flash Sports || Contact Page</title>
+    <title>Flash Sports || Inscription </title>
 
   </head>
 
@@ -75,9 +75,8 @@
             
           </div>
           <div class="input50">
-            <label for="weight">Choisissez votre poids :</label>
+            <label for="weight" style="Fira Mono;color: rgb(64, 133, 229);" >Choisissez votre poids :</label>
             <input type="number" id="weight" name="weight" min="30" max="150" step="1">
-            <output for="weight" id="weightValue"></output>
           </div>
           <div class="row">
             <div class="input100">
